UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/CELL_RecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>CELL_RecurringCharge__c</fullName>
    <label>CELL_RecurringCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>