UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/DID_Numbers__c.field-meta.xml
<CustomField>
    <fullName>DID_Numbers__c</fullName>
    <label>DID Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>