UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/DID_Type__c.field-meta.xml
<CustomField>
    <fullName>DID_Type__c</fullName>
    <label>DID Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>