UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/DPI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DPI_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPI Enabled</label>
    <type>Checkbox</type>
</CustomField>