UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/EIA_Over_SDWAN__c.field-meta.xml
<CustomField>
    <fullName>EIA_Over_SDWAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If DIA is sold over SDWAN, we copy attributes from SDWAN into DIA for Orchestration into M6.</description>
    <label>DIA Over SDWAN?</label>
    <type>Checkbox</type>
</CustomField>