UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ELAN_HBE_Manually_Updated__c.field-meta.xml
<CustomField>
    <fullName>ELAN_HBE_Manually_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ELAN HBE Manually Updated ?</label>
    <type>Checkbox</type>
</CustomField>