UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/EVPL_OneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>EVPL_OneTimeTotal__c</fullName>
    <label>EVPL_OneTimeTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>