UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/EVPL_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EVPL_Quantity__c</fullName>
    <label>EVPL_Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>