UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/Existing__c.field-meta.xml
<CustomField>
    <fullName>Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing?</label>
    <type>Checkbox</type>
</CustomField>