UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_DIDLocationId__c.field-meta.xml
<CustomField>
    <fullName>ftr_DIDLocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ftr_DIDLocationId</label>
    <referenceTo>ftr_DID_Location_Details__c</referenceTo>
    <relationshipLabel>DID Location</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>