UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_HBE_Location_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ftr_HBE_Location_Eligible__c</fullName>
    <description>This Field is for Additional Details HBE Location Eligible in Order layout</description>
    <formula>IF(AND(OR(vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_EIA_0002&apos; ,vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_EVPL_0002&apos; , vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_EVPL_0010&apos;, vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_UNI_0001&apos;, vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_IP_0002&apos;),AND(vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.ftr_WC_Speed_Mbps__c&gt;5000)),&apos;YES&apos;,&apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HBE LOCATION Eligible</label>
    <type>Text</type>
</CustomField>