UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_HostToSIPTrunk__c.field-meta.xml
<CustomField>
    <fullName>ftr_HostToSIPTrunk__c</fullName>
    <label>ftr_HostToSIPTrunk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>