UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_hostUNISECNCI__c.field-meta.xml
<CustomField>
    <fullName>ftr_hostUNISECNCI__c</fullName>
    <label>ftr_hostUNISECNCI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>