UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_IsComboOrderEnabled__c.field-meta.xml
<CustomField>
    <fullName>ftr_IsComboOrderEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsComboOrderEnabled</label>
    <type>Checkbox</type>
</CustomField>