UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_IsUNISwapRequired__c.field-meta.xml
<CustomField>
    <fullName>ftr_IsUNISwapRequired__c</fullName>
    <label>ftr_IsUNISwapRequired</label>
    <length>10</length>
    <type>Text</type>
</CustomField>