UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_MR_Premier__c.field-meta.xml
<CustomField>
    <fullName>ftr_MR_Premier__c</fullName>
    <label>ftr_MR_Premier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>