UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_ParentItemId__c.field-meta.xml
<CustomField>
    <fullName>ftr_ParentItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Parent Item)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>