UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_Promo_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ftr_Promo_Campaign__c</fullName>
    <label>ftr Promo Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>