UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_PromoCode__c.field-meta.xml
<CustomField>
    <fullName>ftr_PromoCode__c</fullName>
    <label>ftr_PromoCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>