UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_PSR_HBE_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ftr_PSR_HBE_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSR HBE Eligible</label>
    <type>Checkbox</type>
</CustomField>