UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ftr_SDWAN_HA__c.field-meta.xml
<CustomField>
    <fullName>ftr_SDWAN_HA__c</fullName>
    <label>ftr_SDWAN_HA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>