UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/HostToEVPL__c.field-meta.xml
<CustomField>
    <fullName>HostToEVPL__c</fullName>
    <label>HostToEVPL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>