UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/ItemSequence__c.field-meta.xml
<CustomField>
    <fullName>ItemSequence__c</fullName>
    <label>ItemSequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>