UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/LineItemsCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemsCount__c</fullName>
    <label>LineItemsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>