UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/LocationUNI__c.field-meta.xml
<CustomField>
    <fullName>LocationUNI__c</fullName>
    <formula>Premise_Detail__c  + &quot;-&quot; + vlocity_cmt__ItemName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LocationUNI</label>
    <type>Text</type>
</CustomField>