UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/MR_RecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>MR_RecurringCharge__c</fullName>
    <label>MR_RecurringCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>