UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/MSA_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MSA_Quantity__c</fullName>
    <label>MSA_Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>