UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/MSA_RecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>MSA_RecurringCharge__c</fullName>
    <label>MSA_RecurringCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>