UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/MSA_SNE_Code_MRC__c.field-meta.xml
<CustomField>
    <fullName>MSA_SNE_Code_MRC__c</fullName>
    <label>MSA_SNE_Code_MRC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>