UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/MSS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MSS_Quantity__c</fullName>
    <label>MSS_Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>