UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/MSS_SNE_Code_TERM__c.field-meta.xml
<CustomField>
    <fullName>MSS_SNE_Code_TERM__c</fullName>
    <label>MSS_SNE_Code_TERM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>