UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/Not_Assertizeable__c.field-meta.xml
<CustomField>
    <fullName>Not_Assertizeable__c</fullName>
    <formula>vlocity_cmt__Product2Id__r.vlocity_cmt__IsNotAssetizable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Assertizeable</label>
    <type>Checkbox</type>
</CustomField>