UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/Order_Product_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Subtype__c</fullName>
    <formula>TEXT(vlocity_cmt__Product2Id__r.vlocity_cmt__SubType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Subtype</label>
    <type>Text</type>
</CustomField>