UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/OUT_RecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>OUT_RecurringCharge__c</fullName>
    <label>OUT_RecurringCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>