UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT(Product2.vlocity_cmt__Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>