UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/SharedUNI__c.field-meta.xml
<CustomField>
    <fullName>SharedUNI__c</fullName>
    <label>SharedUNI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>