UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/SIP_INSK_OneTimeCh__c.field-meta.xml
<CustomField>
    <fullName>SIP_INSK_OneTimeCh__c</fullName>
    <label>SIP_INSK_OneTimeCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>