UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/SIP_RMB_OneTimeCharge__c.field-meta.xml
<CustomField>
    <fullName>SIP_RMB_OneTimeCharge__c</fullName>
    <label>SIP_RMB_OneTimeCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>