UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/SNE_Code_TERM__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code_TERM__c</fullName>
    <label>S&amp;E Code (TERM)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>