UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/UCF_DID_Numbers__c.field-meta.xml
<CustomField>
    <fullName>UCF_DID_Numbers__c</fullName>
    <label>UCF DID Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>