UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/UCF_DID_Order_Items__c.field-meta.xml
<CustomField>
    <fullName>UCF_DID_Order_Items__c</fullName>
    <label>UCF DID Order Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>