UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/UNI_Host__c.field-meta.xml
<CustomField>
    <fullName>UNI_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNI Host</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (UNI Host)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>