UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/UNI_Remote__c.field-meta.xml
<CustomField>
    <fullName>UNI_Remote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNI Remote</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (UNI Remote)</relationshipLabel>
    <relationshipName>Order_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>