UCF-APR2.4/ftr main/force-app/main/default/objects/OrderItem/fields/VLAN_Tag_Config__c.field-meta.xml
<CustomField>
    <fullName>VLAN_Tag_Config__c</fullName>
    <label>VLAN_Tag_Config</label>
    <length>100</length>
    <type>Text</type>
</CustomField>